Removed leading / from href and src.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 .intro {
   position: relative;
-  background: url("/background2.jpg");
+  background: url("background2.jpg");
   text-align: center;
   font-family: 'GillSans';
 }
